// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Blog/Components/Navigation/NavBar Full 1`] = `
<nav
  className="max-w-5xl overflow-x-auto mx-auto text-center"
>
  <ul
    className="mb-8 whitespace-nowrap"
  >
    <li
      className="inline mr-1"
    >
      <a
        href="/"
      >
        <span
          className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
          title=""
        >
          Latest
        </span>
      </a>
    </li>
    <li
      className="inline mr-1"
    >
      <a
        href="/posts/About-Me"
      >
        <span
          className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
          title=""
        >
          About Me
        </span>
      </a>
    </li>
    <li
      className="inline mr-1"
    >
      <a
        href="/posts/Vlogs"
      >
        <span
          className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
          title=""
        >
          Vlogs
        </span>
      </a>
    </li>
    <li
      className="inline mr-1"
    >
      <a
        href="/posts/Tutorials"
      >
        <span
          className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
          title=""
        >
          Tutorials
        </span>
      </a>
    </li>
    <li
      className="inline mr-1"
    >
      <a
        href="/posts/Quick-Tips"
      >
        <span
          className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
          title=""
        >
          Quick Tips
        </span>
      </a>
    </li>
    <li
      className="inline mr-1"
    >
      <a
        href="/posts/Process"
      >
        <span
          className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
          title=""
        >
          Process
        </span>
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots Blog/Components/Navigation/NavBar Mobile 1`] = `
<nav
  className="max-w-5xl overflow-x-auto mx-auto text-center"
>
  <ul
    className="mb-8 whitespace-nowrap"
  >
    <li
      className="inline mr-1"
    >
      <a
        href="/"
      >
        <span
          className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
          title=""
        >
          Latest
        </span>
      </a>
    </li>
    <li
      className="inline mr-1"
    >
      <a
        href="/posts/About-Me"
      >
        <span
          className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
          title=""
        >
          About Me
        </span>
      </a>
    </li>
    <li
      className="inline mr-1"
    >
      <a
        href="/posts/Vlogs"
      >
        <span
          className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
          title=""
        >
          Vlogs
        </span>
      </a>
    </li>
    <li
      className="inline mr-1"
    >
      <a
        href="/posts/Tutorials"
      >
        <span
          className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
          title=""
        >
          Tutorials
        </span>
      </a>
    </li>
    <li
      className="inline mr-1"
    >
      <a
        href="/posts/Quick-Tips"
      >
        <span
          className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
          title=""
        >
          Quick Tips
        </span>
      </a>
    </li>
    <li
      className="inline mr-1"
    >
      <a
        href="/posts/Process"
      >
        <span
          className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
          title=""
        >
          Process
        </span>
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots Blog/Components/Navigation/NavBarItem Not Selected Index 1`] = `
<a
  href="/"
>
  <span
    className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
    title=""
  >
    Latest
  </span>
</a>
`;

exports[`Storyshots Blog/Components/Navigation/NavBarItem Not Selected Other Than Index 1`] = `
<a
  href="/posts/About-Me"
>
  <span
    className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
    title=""
  >
    About Me
  </span>
</a>
`;

exports[`Storyshots Blog/Components/Navigation/NavBarItem Selected Index 1`] = `
<a
  href="/"
>
  <span
    className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
    title=""
  >
    Latest
  </span>
</a>
`;

exports[`Storyshots Blog/Components/Navigation/NavBarItem Selected Other Than Index 1`] = `
<a
  href="/posts/About-Me"
>
  <span
    className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
    title=""
  >
    About Me
  </span>
</a>
`;

exports[`Storyshots Blog/Components/Post/BodyText Basic With Bold 1`] = `
<p>
  ""
</p>
`;

exports[`Storyshots Blog/Components/Post/BodyText With Code 1`] = `
<p>
  ""
</p>
`;

exports[`Storyshots Blog/Components/Post/BodyText With Image 1`] = `
<p>
  ""
</p>
`;

exports[`Storyshots Blog/Components/Post/BodyText With Link 1`] = `
<p>
  ""
</p>
`;

exports[`Storyshots Blog/Components/Post/CommentFormButton Add Comment Form Not Selected 1`] = `
<a
  className="mx-4 md:mx-0 py-8 inline-block"
  href="#"
  role="button"
>
  <span
    className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
    title=""
  >
    Add a comment
  </span>
</a>
`;

exports[`Storyshots Blog/Components/Post/CommentFormButton Add Comment Form Selected 1`] = `
<a
  className="mx-4 md:mx-0 py-8 inline-block"
  href="#"
  role="button"
>
  <span
    className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
    title=""
  >
    Cancel
  </span>
</a>
`;

exports[`Storyshots Blog/Components/Post/CommentFormButton Form Errored During Request 1`] = `
<a
  className="mx-4 md:mx-0 py-8 inline-block"
  href="#"
  role="button"
>
  <span
    className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
    title=""
  >
    Reset
  </span>
</a>
`;

exports[`Storyshots Blog/Components/Post/CommentFormButton Form Succeeded After Request 1`] = `
<a
  className="mx-4 md:mx-0 py-8 inline-block"
  href="#"
  role="button"
>
  <span
    className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
    title=""
  >
    Reset
  </span>
</a>
`;

exports[`Storyshots Blog/Components/Post/Comments With Comments 1`] = `
Array [
  <hr
    className="mx-4 md:mx-0 border-gray-800 h-4 border-t-2 mt-10"
  />,
  <h2
    className="mx-4 md:mx-0 text-xl md:text-2xl text-gray-800 py-2 font-mainFont"
  >
    Comments
  </h2>,
  <ul>
    <li
      className="mx-4 md:mx-0 text-l md:text-xl text-gray-800 mt-3"
    >
      <strong>
        Fred
      </strong>
       - 
      An equisite post, fascinating read!
    </li>
    <li
      className="mx-4 md:mx-0 text-l md:text-xl text-gray-800 mt-3"
    >
      <strong>
        Jim
      </strong>
       - 
      What an amazing post, thanks you for publishing it!
    </li>
  </ul>,
  <a
    className="mx-4 md:mx-0 py-8 inline-block"
    href="#"
    onClick={[Function]}
    role="button"
  >
    <span
      className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
      title=""
    >
      Add a comment
    </span>
  </a>,
  <br />,
]
`;

exports[`Storyshots Blog/Components/Post/Comments With No Comments 1`] = `
Array [
  <hr
    className="mx-4 md:mx-0 border-gray-800 h-4 border-t-2 mt-10"
  />,
  <h2
    className="mx-4 md:mx-0 text-xl md:text-2xl text-gray-800 py-2 font-mainFont"
  >
    Comments
  </h2>,
  <ul>
    <li
      className="mx-4 md:mx-0 text-l md:text-xl text-gray-800 mt-5"
    >
      There have been no comments as of yet, feel free to share : )
    </li>
  </ul>,
  <a
    className="mx-4 md:mx-0 py-8 inline-block"
    href="#"
    onClick={[Function]}
    role="button"
  >
    <span
      className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
      title=""
    >
      Add a comment
    </span>
  </a>,
  <br />,
]
`;

exports[`Storyshots Blog/Components/Post/Form Form Errored On Request 1`] = `
<p>
  Sorry, there has been an error, please reset and retry.
</p>
`;

exports[`Storyshots Blog/Components/Post/Form Form Selected 1`] = `
<form
  className="m-2 inline-block md:m-0 md:w-1/2"
  id="commentForm"
>
  <fieldset
    className="space-y-2"
  >
    <legend
      className=" border-gray-800 text-right my-2 inline-block"
    >
      Note: comments are reviewed before publishing
    </legend>
    <div
      className="flex items-center"
    >
      <label
        className="w-20 text-right mr-2"
        htmlFor="name"
      >
        Name:
      </label>
      <input
        className="flex-1 h-10 p-2"
        name="name"
        onKeyUp={[Function]}
        placeholder="* 2 chars min"
      />
    </div>
    <div
      className="flex"
    >
      <label
        className="w-20 text-right mr-2"
        htmlFor="comment"
      >
        Comment:
      </label>
      <textarea
        className="flex-1 p-2"
        name="comment"
        onKeyUp={[Function]}
        placeholder="* 10 chars min no longer than a tweet"
        rows={5}
      />
    </div>
    <span
      className="
            float-right disabledCommentButton
            text-gray-300 
            hover:text-gray-50
            bg-gray-600 hover:text-gray-300 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
      title="Disabled"
    >
      Submit
    </span>
  </fieldset>
</form>
`;

exports[`Storyshots Blog/Components/Post/Form Form Success After Request 1`] = `
<p>
  Thank you for submitting your comment, I will have a read and publish ASAP.
</p>
`;

exports[`Storyshots Blog/Components/Post/MainImage Main Post Image 1`] = `
Array [
  <img
    alt="Strapi blog post"
    className="max-w-sm hidden  md:float-right ml-10 mb-10 md:block"
    src="images/str.jpg"
  />,
  <div
    className="h-24 mb-5 w-full bg-cover md:hidden"
    style={
      Object {
        "backgroundImage": "url(images/str.jpg)",
        "backgroundPositionY": "-40px",
      }
    }
    title="Strapi blog post"
  >
     
  </div>,
]
`;

exports[`Storyshots Blog/Components/Post/MainImage Main Post Image On Mobile 1`] = `
Array [
  <img
    alt="Strapi blog post"
    className="max-w-sm hidden  md:float-right ml-10 mb-10 md:block"
    src="images/str.jpg"
  />,
  <div
    className="h-24 mb-5 w-full bg-cover md:hidden"
    style={
      Object {
        "backgroundImage": "url(images/str.jpg)",
        "backgroundPositionY": "-40px",
      }
    }
    title="Strapi blog post"
  >
     
  </div>,
]
`;

exports[`Storyshots Blog/Components/Post/Post Full Post 1`] = `
<p>
  ""
</p>
`;

exports[`Storyshots Blog/Components/Post/Post Full Post Mobile 1`] = `
<p>
  ""
</p>
`;

exports[`Storyshots Blog/Components/Post/PostTypeIndicator Article 1`] = `
<div
  className=" border-gray-800 bg-white border-2 p-1 inline-block rounded-full md:hidden float-right mr-4"
  title="Article"
>
  <svg
    fill="#333"
    height="25"
    viewBox="0 0 20 20"
    width="25"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 4.804A7.968 7.968 0 005.5 4c-1.255 0-2.443.29-3.5.804v10A7.969 7.969 0 015.5 14c1.669 0 3.218.51 4.5 1.385A7.962 7.962 0 0114.5 14c1.255 0 2.443.29 3.5.804v-10A7.968 7.968 0 0014.5 4c-1.255 0-2.443.29-3.5.804V12a1 1 0 11-2 0V4.804z"
    />
  </svg>
</div>
`;

exports[`Storyshots Blog/Components/Post/PostTypeIndicator Quick Tip 1`] = `
<div
  className=" border-gray-800 bg-white border-2 p-1 inline-block rounded-full md:hidden float-right mr-4"
  title="Quick Tip"
>
  <svg
    fill="#333"
    height="25"
    viewBox="0 0 20 20"
    width="25"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M11.3 1.046A1 1 0 0112 2v5h4a1 1 0 01.82 1.573l-7 10A1 1 0 018 18v-5H4a1 1 0 01-.82-1.573l7-10a1 1 0 011.12-.38z"
      fillRule="evenodd"
    />
  </svg>
</div>
`;

exports[`Storyshots Blog/Components/Post/PostTypeIndicator Tutorial 1`] = `
<div
  className=" border-gray-800 bg-white border-2 p-1 inline-block rounded-full md:hidden float-right mr-4"
  title="Tutorial"
>
  <svg
    fill="#333"
    height="25"
    viewBox="0 0 20 20"
    width="25"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10.394 2.08a1 1 0 00-.788 0l-7 3a1 1 0 000 1.84L5.25 8.051a.999.999 0 01.356-.257l4-1.714a1 1 0 11.788 1.838L7.667 9.088l1.94.831a1 1 0 00.787 0l7-3a1 1 0 000-1.838l-7-3zM3.31 9.397L5 10.12v4.102a8.969 8.969 0 00-1.05-.174 1 1 0 01-.89-.89 11.115 11.115 0 01.25-3.762zM9.3 16.573A9.026 9.026 0 007 14.935v-3.957l1.818.78a3 3 0 002.364 0l5.508-2.361a11.026 11.026 0 01.25 3.762 1 1 0 01-.89.89 8.968 8.968 0 00-5.35 2.524 1 1 0 01-1.4 0zM6 18a1 1 0 001-1v-2.065a8.935 8.935 0 00-2-.712V17a1 1 0 001 1z"
    />
  </svg>
</div>
`;

exports[`Storyshots Blog/Components/Post/PostTypeIndicator Video Tutorial 1`] = `
<div
  className=" border-gray-800 bg-white border-2 p-1 inline-block rounded-full md:hidden float-right mr-4"
  title="Video Tutorial"
>
  <svg
    fill="#333"
    height="25"
    viewBox="0 0 20 20"
    width="25"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M3 5a2 2 0 012-2h10a2 2 0 012 2v8a2 2 0 01-2 2h-2.22l.123.489.804.804A1 1 0 0113 18H7a1 1 0 01-.707-1.707l.804-.804L7.22 15H5a2 2 0 01-2-2V5zm5.771 7H5V5h10v7H8.771z"
      fillRule="evenodd"
    />
  </svg>
</div>
`;

exports[`Storyshots Blog/Components/Post/PostTypeIndicator Vlog 1`] = `
<div
  className=" border-gray-800 bg-white border-2 p-1 inline-block rounded-full md:hidden float-right mr-4"
  title="Vlog"
>
  <svg
    fill="#333"
    height="25"
    viewBox="0 0 20 20"
    width="25"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 6a2 2 0 012-2h6a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V6zM14.553 7.106A1 1 0 0014 8v4a1 1 0 00.553.894l2 1A1 1 0 0018 13V7a1 1 0 00-1.447-.894l-2 1z"
    />
  </svg>
</div>
`;

exports[`Storyshots Blog/Components/PostPreviews/CustomLink Article With You Tube Link 1`] = `
<a
  className="absolute bottom-4 right-4"
  href="/post/First-Post"
>
  <span
    className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
    title=""
  >
    read
  </span>
</a>
`;

exports[`Storyshots Blog/Components/PostPreviews/CustomLink Article Without You Tube Link 1`] = `
<a
  className="absolute bottom-4 right-4"
  href="/post/First-Post"
>
  <span
    className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
    title=""
  >
    read
  </span>
</a>
`;

exports[`Storyshots Blog/Components/PostPreviews/CustomLink Video Tutorial With You Tube Link 1`] = `
<a
  className="absolute bottom-4 right-4"
  href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
  target="_blank"
>
  <span
    className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
    title=""
  >
    watch & learn
  </span>
</a>
`;

exports[`Storyshots Blog/Components/PostPreviews/CustomLink Video Tutorial Without You Tube Link 1`] = `
<a
  className="absolute bottom-4 right-4"
  href="/post/First-Post"
>
  <span
    className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
    title=""
  >
    read
  </span>
</a>
`;

exports[`Storyshots Blog/Components/PostPreviews/CustomLink Vlog With You Tube Link 1`] = `
<a
  className="absolute bottom-4 right-4"
  href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
  target="_blank"
>
  <span
    className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
    title=""
  >
    watch
  </span>
</a>
`;

exports[`Storyshots Blog/Components/PostPreviews/CustomLink Vlog Without You Tube Link 1`] = `
<a
  className="absolute bottom-4 right-4"
  href="/post/First-Post"
>
  <span
    className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
    title=""
  >
    read
  </span>
</a>
`;

exports[`Storyshots Blog/Components/PostPreviews/PostPreview Preview 1`] = `
<p>
  ""
</p>
`;

exports[`Storyshots Blog/Components/PostPreviews/PostPreviews Full 1`] = `
<p>
  ""
</p>
`;

exports[`Storyshots Blog/Components/PostPreviews/PostPreviews Mobile 1`] = `
<p>
  ""
</p>
`;

exports[`Storyshots Blog/Components/Shared/Button Default 1`] = `
<span
  className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
  title=""
>
  button
</span>
`;

exports[`Storyshots Blog/Components/Shared/Button Disabled 1`] = `
<span
  className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-600 hover:text-gray-300 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
  title="Disabled"
>
  button
</span>
`;

exports[`Storyshots Blog/Components/Shared/Button Selected 1`] = `
<span
  className="
            undefined
            text-my-orange 
            false
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
  title=""
>
  button
</span>
`;

exports[`Storyshots Blog/Components/Shared/Header Full 1`] = `
<section
  className="header w-full text-center"
>
  <h1
    className="font-headerFont text-gray-700 text-6xl md:text-7xl py-4"
  >
    Sabbatical dev
  </h1>
  <nav
    className="max-w-5xl overflow-x-auto mx-auto text-center"
  >
    <ul
      className="mb-8 whitespace-nowrap"
    >
      <li
        className="inline mr-1"
      >
        <a
          href="/"
        >
          <span
            className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
            title=""
          >
            Latest
          </span>
        </a>
      </li>
      <li
        className="inline mr-1"
      >
        <a
          href="/posts/About-Me"
        >
          <span
            className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
            title=""
          >
            About Me
          </span>
        </a>
      </li>
      <li
        className="inline mr-1"
      >
        <a
          href="/posts/Vlogs"
        >
          <span
            className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
            title=""
          >
            Vlogs
          </span>
        </a>
      </li>
      <li
        className="inline mr-1"
      >
        <a
          href="/posts/Tutorials"
        >
          <span
            className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
            title=""
          >
            Tutorials
          </span>
        </a>
      </li>
      <li
        className="inline mr-1"
      >
        <a
          href="/posts/Quick-Tips"
        >
          <span
            className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
            title=""
          >
            Quick Tips
          </span>
        </a>
      </li>
      <li
        className="inline mr-1"
      >
        <a
          href="/posts/Process"
        >
          <span
            className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
            title=""
          >
            Process
          </span>
        </a>
      </li>
    </ul>
  </nav>
</section>
`;

exports[`Storyshots Blog/Components/Shared/Header Mobile 1`] = `
<section
  className="header w-full text-center"
>
  <h1
    className="font-headerFont text-gray-700 text-6xl md:text-7xl py-4"
  >
    Sabbatical dev
  </h1>
  <nav
    className="max-w-5xl overflow-x-auto mx-auto text-center"
  >
    <ul
      className="mb-8 whitespace-nowrap"
    >
      <li
        className="inline mr-1"
      >
        <a
          href="/"
        >
          <span
            className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
            title=""
          >
            Latest
          </span>
        </a>
      </li>
      <li
        className="inline mr-1"
      >
        <a
          href="/posts/About-Me"
        >
          <span
            className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
            title=""
          >
            About Me
          </span>
        </a>
      </li>
      <li
        className="inline mr-1"
      >
        <a
          href="/posts/Vlogs"
        >
          <span
            className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
            title=""
          >
            Vlogs
          </span>
        </a>
      </li>
      <li
        className="inline mr-1"
      >
        <a
          href="/posts/Tutorials"
        >
          <span
            className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
            title=""
          >
            Tutorials
          </span>
        </a>
      </li>
      <li
        className="inline mr-1"
      >
        <a
          href="/posts/Quick-Tips"
        >
          <span
            className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
            title=""
          >
            Quick Tips
          </span>
        </a>
      </li>
      <li
        className="inline mr-1"
      >
        <a
          href="/posts/Process"
        >
          <span
            className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
            title=""
          >
            Process
          </span>
        </a>
      </li>
    </ul>
  </nav>
</section>
`;

exports[`Storyshots Blog/Pages/404 Primary 1`] = `
Array [
  <section
    className="header w-full text-center"
  >
    <h1
      className="font-headerFont text-gray-700 text-6xl md:text-7xl py-4"
    >
      Sabbatical dev
    </h1>
    <nav
      className="max-w-5xl overflow-x-auto mx-auto text-center"
    >
      <ul
        className="mb-8 whitespace-nowrap"
      >
        <li
          className="inline mr-1"
        >
          <a
            href="/"
          >
            <span
              className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
              title=""
            >
              Latest
            </span>
          </a>
        </li>
        <li
          className="inline mr-1"
        >
          <a
            href="/posts//about-me"
          >
            <span
              className="
            undefined
            text-gray-300 
            hover:text-gray-50
            bg-gray-800 
            text-sm 
            py-1 px-2 
            uppercase 
            font-mainFont 
            inline-block"
              title=""
            >
              About me
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </section>,
  <img
    alt="sabbatical dev"
    className="fixed bottom-0 right-0 h-1/2 w-auto opacity-30 object-contain object-right-bottom"
    src="/tree.png"
  />,
  <img
    alt="technical blog"
    className="fixed top-150 opacity-30 h-2/4 object-contain object-right-top"
    src="/birds.png"
  />,
  <h1
    className="mx-auto py-2 text-2xl text-gray-800 text-center"
  >
    404 - Page Not Found
  </h1>,
]
`;

exports[`Storyshots Blog/Pages/Index Loaded 1`] = `
<p>
  ""
</p>
`;

exports[`Storyshots Blog/Pages/Post Fallback 1`] = `
<p>
  ""
</p>
`;

exports[`Storyshots Blog/Pages/Post Loaded 1`] = `
<p>
  ""
</p>
`;

exports[`Storyshots Blog/Pages/Posts Fallback 1`] = `
<p>
  ""
</p>
`;

exports[`Storyshots Blog/Pages/Posts Loaded 1`] = `
<p>
  ""
</p>
`;
